src/xLogo_Parser/Parser/Grammar/xLogoParser.ts
// Generated from Grammar/xLogo.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { xLogoVisitor } from "./xLogoVisitor";


export class xLogoParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly To = 25;
	public static readonly End = 26;
	public static readonly FuncNameNoArg = 27;
	public static readonly FuncNameOneArg = 28;
	public static readonly FuncNameTwoArg = 29;
	public static readonly Colorname = 30;
	public static readonly ColornameGray = 31;
	public static readonly Make = 32;
	public static readonly Print = 33;
	public static readonly Sin = 34;
	public static readonly Sqrt = 35;
	public static readonly Tan = 36;
	public static readonly Abs = 37;
	public static readonly Arccos = 38;
	public static readonly Arcsin = 39;
	public static readonly Arctan = 40;
	public static readonly Cos = 41;
	public static readonly Mod = 42;
	public static readonly Random = 43;
	public static readonly Round = 44;
	public static readonly Power = 45;
	public static readonly Log = 46;
	public static readonly PiConst = 47;
	public static readonly EConst = 48;
	public static readonly Variable = 49;
	public static readonly VarDecl = 50;
	public static readonly Number = 51;
	public static readonly Boolean = 52;
	public static readonly Identifier = 53;
	public static readonly COMMENT = 54;
	public static readonly EOL = 55;
	public static readonly WS = 56;
	public static readonly ErrorCharacter = 57;
	public static readonly RULE_prog = 0;
	public static readonly RULE_inputLines = 1;
	public static readonly RULE_programDeclaration = 2;
	public static readonly RULE_paramList = 3;
	public static readonly RULE_stmt = 4;
	public static readonly RULE_stmtBlock = 5;
	public static readonly RULE_repeatStmt = 6;
	public static readonly RULE_ifStmt = 7;
	public static readonly RULE_whileStmt = 8;
	public static readonly RULE_makeStmt = 9;
	public static readonly RULE_printStmt = 10;
	public static readonly RULE_progCallStmt = 11;
	public static readonly RULE_expr = 12;
	public static readonly RULE_literal = 13;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"prog", "inputLines", "programDeclaration", "paramList", "stmt", "stmtBlock", 
		"repeatStmt", "ifStmt", "whileStmt", "makeStmt", "printStmt", "progCallStmt", 
		"expr", "literal",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'\uFEFF'", "'['", "']'", "'repeat'", "'if'", "'while'", "'{'", 
		"'}'", "'('", "')'", "'+'", "'-'", "'!'", "'*'", "'/'", "'%'", "'<'", 
		"'<='", "'>'", "'>='", "'='", "'!='", "'&&'", "'||'", "'to'", "'end'", 
		undefined, undefined, undefined, undefined, undefined, "'make'", undefined, 
		"'sin'", "'sqrt'", "'tan'", "'abs'", undefined, undefined, undefined, 
		"'cos'", "'mod'", undefined, "'round'", undefined, undefined, "'pi'", 
		"'e'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, "To", "End", "FuncNameNoArg", 
		"FuncNameOneArg", "FuncNameTwoArg", "Colorname", "ColornameGray", "Make", 
		"Print", "Sin", "Sqrt", "Tan", "Abs", "Arccos", "Arcsin", "Arctan", "Cos", 
		"Mod", "Random", "Round", "Power", "Log", "PiConst", "EConst", "Variable", 
		"VarDecl", "Number", "Boolean", "Identifier", "COMMENT", "EOL", "WS", 
		"ErrorCharacter",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(xLogoParser._LITERAL_NAMES, xLogoParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return xLogoParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "xLogo.g4"; }

	// @Override
	public get ruleNames(): string[] { return xLogoParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return xLogoParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(xLogoParser._ATN, this);
	}
	// @RuleVersion(0)
	public prog(): ProgContext {
		let _localctx: ProgContext = new ProgContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, xLogoParser.RULE_prog);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 31;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === xLogoParser.EOL) {
				{
				{
				this.state = 28;
				this.match(xLogoParser.EOL);
				}
				}
				this.state = 33;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 44;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === xLogoParser.To) {
				{
				this.state = 34;
				this.programDeclaration();
				this.state = 41;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === xLogoParser.EOL) {
					{
					{
					this.state = 35;
					this.match(xLogoParser.EOL);
					this.state = 37;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la === xLogoParser.To) {
						{
						this.state = 36;
						this.programDeclaration();
						}
					}

					}
					}
					this.state = 43;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 47;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === xLogoParser.T__0) {
				{
				this.state = 46;
				this.match(xLogoParser.T__0);
				}
			}

			this.state = 49;
			this.match(xLogoParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public inputLines(): InputLinesContext {
		let _localctx: InputLinesContext = new InputLinesContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, xLogoParser.RULE_inputLines);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 55;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << xLogoParser.T__3) | (1 << xLogoParser.T__4) | (1 << xLogoParser.T__5))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (xLogoParser.Make - 32)) | (1 << (xLogoParser.Print - 32)) | (1 << (xLogoParser.Identifier - 32)) | (1 << (xLogoParser.EOL - 32)))) !== 0)) {
				{
				this.state = 53;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case xLogoParser.T__3:
				case xLogoParser.T__4:
				case xLogoParser.T__5:
				case xLogoParser.Make:
				case xLogoParser.Print:
				case xLogoParser.Identifier:
					{
					this.state = 51;
					this.stmt();
					}
					break;
				case xLogoParser.EOL:
					{
					this.state = 52;
					this.match(xLogoParser.EOL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 57;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 58;
			this.match(xLogoParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public programDeclaration(): ProgramDeclarationContext {
		let _localctx: ProgramDeclarationContext = new ProgramDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, xLogoParser.RULE_programDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 60;
			this.match(xLogoParser.To);
			this.state = 61;
			this.match(xLogoParser.Identifier);
			this.state = 63;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === xLogoParser.Variable) {
				{
				this.state = 62;
				this.paramList();
				}
			}

			this.state = 65;
			this.match(xLogoParser.EOL);
			this.state = 75;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << xLogoParser.T__3) | (1 << xLogoParser.T__4) | (1 << xLogoParser.T__5))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (xLogoParser.Make - 32)) | (1 << (xLogoParser.Print - 32)) | (1 << (xLogoParser.Identifier - 32)) | (1 << (xLogoParser.EOL - 32)))) !== 0)) {
				{
				{
				this.state = 69;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << xLogoParser.T__3) | (1 << xLogoParser.T__4) | (1 << xLogoParser.T__5))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (xLogoParser.Make - 32)) | (1 << (xLogoParser.Print - 32)) | (1 << (xLogoParser.Identifier - 32)))) !== 0)) {
					{
					{
					this.state = 66;
					this.stmt();
					}
					}
					this.state = 71;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 72;
				this.match(xLogoParser.EOL);
				}
				}
				this.state = 77;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 78;
			this.match(xLogoParser.End);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public paramList(): ParamListContext {
		let _localctx: ParamListContext = new ParamListContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, xLogoParser.RULE_paramList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 81;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 80;
				this.match(xLogoParser.Variable);
				}
				}
				this.state = 83;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === xLogoParser.Variable);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public stmt(): StmtContext {
		let _localctx: StmtContext = new StmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, xLogoParser.RULE_stmt);
		try {
			this.state = 91;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case xLogoParser.Make:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 85;
				this.makeStmt();
				}
				break;
			case xLogoParser.Print:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 86;
				this.printStmt();
				}
				break;
			case xLogoParser.T__3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 87;
				this.repeatStmt();
				}
				break;
			case xLogoParser.T__4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 88;
				this.ifStmt();
				}
				break;
			case xLogoParser.T__5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 89;
				this.whileStmt();
				}
				break;
			case xLogoParser.Identifier:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 90;
				this.progCallStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public stmtBlock(): StmtBlockContext {
		let _localctx: StmtBlockContext = new StmtBlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, xLogoParser.RULE_stmtBlock);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 93;
			this.match(xLogoParser.T__1);
			this.state = 98;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << xLogoParser.T__3) | (1 << xLogoParser.T__4) | (1 << xLogoParser.T__5))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (xLogoParser.Make - 32)) | (1 << (xLogoParser.Print - 32)) | (1 << (xLogoParser.Identifier - 32)) | (1 << (xLogoParser.EOL - 32)))) !== 0)) {
				{
				this.state = 96;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case xLogoParser.T__3:
				case xLogoParser.T__4:
				case xLogoParser.T__5:
				case xLogoParser.Make:
				case xLogoParser.Print:
				case xLogoParser.Identifier:
					{
					this.state = 94;
					this.stmt();
					}
					break;
				case xLogoParser.EOL:
					{
					this.state = 95;
					this.match(xLogoParser.EOL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 100;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 101;
			this.match(xLogoParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public repeatStmt(): RepeatStmtContext {
		let _localctx: RepeatStmtContext = new RepeatStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, xLogoParser.RULE_repeatStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 103;
			this.match(xLogoParser.T__3);
			this.state = 104;
			this.expr(0);
			this.state = 105;
			this.stmtBlock();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public ifStmt(): IfStmtContext {
		let _localctx: IfStmtContext = new IfStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, xLogoParser.RULE_ifStmt);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 107;
			this.match(xLogoParser.T__4);
			this.state = 108;
			this.expr(0);
			this.state = 109;
			this.stmtBlock();
			this.state = 111;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === xLogoParser.T__1) {
				{
				this.state = 110;
				this.stmtBlock();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public whileStmt(): WhileStmtContext {
		let _localctx: WhileStmtContext = new WhileStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, xLogoParser.RULE_whileStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 113;
			this.match(xLogoParser.T__5);
			this.state = 114;
			this.match(xLogoParser.T__1);
			this.state = 115;
			this.expr(0);
			this.state = 116;
			this.match(xLogoParser.T__2);
			this.state = 117;
			this.stmtBlock();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public makeStmt(): MakeStmtContext {
		let _localctx: MakeStmtContext = new MakeStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, xLogoParser.RULE_makeStmt);
		try {
			this.state = 125;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 15, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 119;
				this.match(xLogoParser.Make);
				this.state = 120;
				this.match(xLogoParser.VarDecl);
				this.state = 121;
				this.expr(0);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 122;
				this.match(xLogoParser.Make);
				this.state = 123;
				this.match(xLogoParser.Variable);
				this.state = 124;
				this.expr(0);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public printStmt(): PrintStmtContext {
		let _localctx: PrintStmtContext = new PrintStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, xLogoParser.RULE_printStmt);
		try {
			let _alt: number;
			this.state = 138;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 17, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 127;
				this.match(xLogoParser.Print);
				this.state = 128;
				this.match(xLogoParser.T__1);
				this.state = 132;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 16, this._ctx);
				while (_alt !== 1 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1 + 1) {
						{
						{
						this.state = 129;
						this.matchWildcard();
						}
						}
					}
					this.state = 134;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 16, this._ctx);
				}
				this.state = 135;
				this.match(xLogoParser.T__2);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 136;
				this.match(xLogoParser.Print);
				this.state = 137;
				this.expr(0);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public progCallStmt(): ProgCallStmtContext {
		let _localctx: ProgCallStmtContext = new ProgCallStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, xLogoParser.RULE_progCallStmt);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 140;
			this.match(xLogoParser.Identifier);
			this.state = 144;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << xLogoParser.T__1) | (1 << xLogoParser.T__6) | (1 << xLogoParser.T__8) | (1 << xLogoParser.T__10) | (1 << xLogoParser.T__11) | (1 << xLogoParser.T__12) | (1 << xLogoParser.FuncNameNoArg) | (1 << xLogoParser.FuncNameOneArg) | (1 << xLogoParser.FuncNameTwoArg) | (1 << xLogoParser.Colorname))) !== 0) || ((((_la - 49)) & ~0x1F) === 0 && ((1 << (_la - 49)) & ((1 << (xLogoParser.Variable - 49)) | (1 << (xLogoParser.Number - 49)) | (1 << (xLogoParser.Boolean - 49)))) !== 0)) {
				{
				{
				this.state = 141;
				this.expr(0);
				}
				}
				this.state = 146;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expr(): ExprContext;
	public expr(_p: number): ExprContext;
	// @RuleVersion(0)
	public expr(_p?: number): ExprContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: ExprContext = new ExprContext(this._ctx, _parentState);
		let _prevctx: ExprContext = _localctx;
		let _startState: number = 24;
		this.enterRecursionRule(_localctx, 24, xLogoParser.RULE_expr, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 174;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case xLogoParser.Colorname:
			case xLogoParser.Variable:
			case xLogoParser.Number:
			case xLogoParser.Boolean:
				{
				_localctx = new ExprLiteralContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 148;
				this.literal();
				}
				break;
			case xLogoParser.T__6:
				{
				_localctx = new ExprColorContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 149;
				this.match(xLogoParser.T__6);
				this.state = 150;
				this.expr(0);
				this.state = 151;
				this.expr(0);
				this.state = 152;
				this.expr(0);
				this.state = 153;
				this.match(xLogoParser.T__7);
				}
				break;
			case xLogoParser.T__1:
				{
				_localctx = new ExprColorContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 155;
				this.match(xLogoParser.T__1);
				this.state = 156;
				this.expr(0);
				this.state = 157;
				this.expr(0);
				this.state = 158;
				this.expr(0);
				this.state = 159;
				this.match(xLogoParser.T__2);
				}
				break;
			case xLogoParser.T__8:
				{
				_localctx = new ExprInBracketsContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 161;
				this.match(xLogoParser.T__8);
				this.state = 162;
				this.expr(0);
				this.state = 163;
				this.match(xLogoParser.T__9);
				}
				break;
			case xLogoParser.T__10:
			case xLogoParser.T__11:
			case xLogoParser.T__12:
				{
				_localctx = new ExprUnaryOpContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 165;
				_la = this._input.LA(1);
				if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << xLogoParser.T__10) | (1 << xLogoParser.T__11) | (1 << xLogoParser.T__12))) !== 0))) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}
